<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationY="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="639dp"
        android:gravity="center|top"
        android:orientation="vertical"
        android:translationY="60dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/storeCountTextView"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/store_count"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sentCountTextView"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/sent_count"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/unsentCountTextView"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/retry_count"
                android:textSize="20sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="360dp"
            android:layout_height="50dp" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="380dp"
            android:layout_height="510dp"
            android:translationY="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/activity_logs"
                android:textSize="16sp"
                android:typeface="monospace" />
        </ScrollView>

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

</androidx.constraintlayout.widget.ConstraintLayout>